# audio_api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/audio_api/: __init__.py  audio_classifier.py  audio_downloader.py  audio_processor.py  config.py  log_config.py  main.py  ml_classifier.py  models.py
tests/: test_api.py  test_audio_classifier.py  test_audio_downloader.py  test_audio_processor.py  test_ml_classifier.py
